# worf

./: .gitignore  Cargo.toml  README.md  publish-all.sh
.github/actions/setup/: action.yml
.github/workflows/: docs.yml  rust.yml
examples/: dmenu.sh
examples/worf-hyprland-exit/: hyprland_exit
examples/worf-hyprspace/: Cargo.toml  Readme.md
examples/worf-hyprspace/src/: main.rs
examples/worf-hyprswitch/: Cargo.toml  Readme.md
examples/worf-hyprswitch/src/: main.rs
examples/worf-rtw/: worf-rtw
examples/worf-warden/: Cargo.toml  Readme.md
examples/worf-warden/src/: main.rs
src/: args.rs  config.rs  gui.rs  main.rs
src/desktop/: mod.rs
src/lib/: config.rs  desktop.rs  gui.rs  mod.rs  mode.rs  system.rs
styles/: launcher.css
styles/AmberNight/: config.toml  style.css
styles/BlueNoVar/: style.css
styles/DarkBlue/: config.toml  style.css
styles/GlacierPrism/: config.toml  style.css
styles/IndigoEdge/: config.toml  style.css
styles/compact/: config.toml  style.css
styles/dmenu/: config.toml  style.css
styles/emoji/: config  config.toml  style.css
styles/fullscreen/: config.toml  style.css
styles/launcher/: config.toml  style.css
styles/math/: config.toml  style.css
styles/relaxed/: config.toml  style.css
worf/: Cargo.toml
worf/src/: main.rs  mod.rs
worf/src/lib/: config.rs  desktop.rs  gui.rs  mod.rs  mode.rs
worf/src/lib/modes/: auto.rs  dmenu.rs  drun.rs  emoji.rs  file.rs  math.rs  mod.rs  run.rs  search.rs  ssh.rs
