[package]
name = "worf"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk4 = { version = "0.9.5", default-features = true, features = ["v4_6"] }
gtk4-layer-shell = "0.5.0"
gdk4 = "0.9.6"
anyhow = "1.0.97"
env_logger = "0.11.8"
home = "0.5.11"
log = "0.4.27"
regex = "1.11.1"
hyprland = "0.4.0-beta.2"
sysinfo = "0.34.2"
ini = "1.3.0"
clap = { version = "4.5.35", features = ["derive"] }
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"
merge = "0.1.0"
serde_json = "1.0.140"
wayland-client = "0.31.8"
wayland-protocols = "0.32.6"
smithay-client-toolkit = { version = "0.19.2", features = ["calloop"]}
calloop = "0.14.2"
crossbeam = "0.8.4"
libc = "0.2.171"
freedesktop-file-parser = "0.1.0"
