[package]
name = "worf"
version = "0.1.2"
edition = "2024"

[lints.clippy]
# enable pedantic
pedantic = { level = "warn", priority = -1 }
## exclude some too pedantic lints for now
similar_names = "allow"

# additional lints
clone_on_ref_ptr = "warn"

[lib]
name = "worf"
path = "src/mod.rs"

[[bin]]
name = "worf"
path = "src/main.rs"

[features]
default = []

[package.metadata.docs.rs]
no-deps = true

[dependencies]
gtk4 = { version = "0.9.5", default-features = true, features = ["v4_6"] }
gtk4-layer-shell = "0.5.0"
gdk4 = "0.9.6"
anyhow = "1.0.97"
env_logger = "0.11.8"
log = "0.4.27"
regex = "1.11.1"
clap = { version = "4.5.38", features = ["derive"] }
freedesktop-icons = "0.4.0"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"
serde_json = "1.0.140"
crossbeam = "0.8.4"
libc = "0.2.171"
#freedesktop-file-parser = "0.2.0"
freedesktop-file-parser = { git = "https://github.com/alexmohr/desktop_file_parser", branch = "fix-wm-class" }
strsim = "0.11.1"
dirs = "6.0.0"
which = "7.0.3"
tree_magic_mini = "3.1.6"
rayon = "1.10.0"
nix = { version = "0.30.0", features = ["process"] }
emoji = "0.2.1"
wl-clipboard-rs = "0.9.2"
notify-rust="4.11.7"
thiserror = "2.0.12"
urlencoding = "2.1.3"
