[package]
name = "worf-hyprswitch"
version = "0.1.0"
edition = "2024"

description = "Elegant window switcher for Hyprland, written in Rust using the Worf API."
keywords = ["hyprland", "window-switcher", "wayland", "worf", "rust"]
license = "GPL-3.0-or-later"
repository = "https://github.com/alexmohr/worf"
documentation = "https://github.com/alexmohr/worf#readme"
homepage = "https://github.com/alexmohr/worf"
readme = "Readme.md"

[dependencies]
worf = { path = "../../worf" }
env_logger = "0.11.8"
hyprland = "0.4.0-beta.2"
sysinfo = "0.35.2"
freedesktop-icons = "0.4.0"
rayon = "1.10.0"
toml = "0.8.22"
