[package]
name = "worf-warden"
version = "0.1.0"
edition = "2024"

description = "Bitwarden frontend and password manager using the Worf API. Integrates with rbw and ydotool for secure password management."
keywords = ["bitwarden", "password-manager", "worf", "wayland"]
license = "GPL-3.0-or-later"
repository = "https://github.com/alexmohr/worf"
documentation = "https://alexmohr.github.io/worf"
homepage = "https://github.com/alexmohr/worf"
readme = "Readme.md"

[dependencies]
worf = { package = "worf-launcher", path = "../../worf", version = "0.7" }
env_logger = "0.11.8"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
clap = { version = "4.5.40", features = ["derive"] }
